Signup page validation added.

--- a/src/app/front/components/footer/front-footer.component.html
+++ b/src/app/front/components/footer/front-footer.component.html
@@ -37,11 +37,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bottomFooterLft">
-          <p>Copyright © 2017, Handsome Inc. All Rights Reserved</p>
+          <p>Copyright © 2017, RotoPros. All Rights Reserved.</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bottomFooterRght">
+        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bottomFooterRght">
           <p>Web Site Designed & Developed by <a href="http://www.flexsin.com/">Flexsin</a></p>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
