--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -16,7 +16,7 @@
             <span>Premium Tools To Dominate</span>
             <span>Daily Fantasy Sports</span>
           </p>
-          <a href="#">Sign Up</a>
+          <a routerLink="/signup">Sign Up</a>
         </div>
       </div>
     </div>
