--- a/src/app/user/components/footer/user-footer.component.html
+++ b/src/app/user/components/footer/user-footer.component.html
@@ -4,8 +4,11 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 topFooterWrapper">
           <h1 class="footerHdin">About Us</h1>
-          <a href="#" class="logoWrapper"><img src="../../../../assets/images/logo.png" alt="LOGO" class="img-responsive" /></a>
-          <p class="footerPara">Lorem Ipsum is simply dummy text of the printing and typesetting Ipsum is simply dummy text of the printing .Lorem Ipsum is simply dummy text of the printing and typesetting Ipsum is simply dummy text of the printing .</p>
+          <a href="#" class="logoWrapper"><img src="../../../../assets/images/logo.png" alt="LOGO"
+                                               class="img-responsive"/></a>
+          <p class="footerPara">Lorem Ipsum is simply dummy text of the printing and typesetting Ipsum is simply dummy
+            text of the printing .Lorem Ipsum is simply dummy text of the printing and typesetting Ipsum is simply dummy
+            text of the printing .</p>
         </div>
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3 col-lg-offset-1">
           <h1 class="footerHdin">Links</h1>
@@ -19,9 +22,12 @@
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-2">
           <h1 class="footerHdin">Follow Us on :</h1>
           <ul class="footerSocialLinks">
-            <li><a href="#"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive" /></a></li>
-            <li><a href="#"><img src="../../../../assets/images/footer_facebook_icn.png" alt="" class="img-responsive" /></a></li>
-            <li><a href="#"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive" /></a></li>
+            <li><a href="#"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a>
+            </li>
+            <li><a href="#"><img src="../../../../assets/images/footer_facebook_icn.png" alt="" class="img-responsive"/></a>
+            </li>
+            <li><a href="#"><img src="../../../../assets/images/footer_insta_icn.png" alt=""
+                                 class="img-responsive"/></a></li>
           </ul>
         </div>
       </div>
@@ -32,11 +38,11 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bottomFooterLft">
-          <p>Copyright © 2017, Handsome Inc.  All Rights Reserved</p>
+          <p>Copyright © 2017, RotoPros. All Rights Reserved.</p>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bottomFooterRght">
+        <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 bottomFooterRght">
           <p>Web Site Designed & Developed by <a href="http://www.flexsin.com/">Flexsin</a> </p>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
