--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,13 @@
   box-shadow: 0 0 0 0 rgba(255, 102, 102, 0);
 }
 
+.loginDetails .formWrapper form input[type="button"]:disabled, .loginDetails .formWrapper form input[type="submit"]:disabled {
+  background: #ddd;
+  border: none;
+  color: #333;
+}
+
+.my-alert {
+  padding: 5px;
+  margin: 5px 0;
+}
