--- a/src/app/user/components/settings/settings.component.html
+++ b/src/app/user/components/settings/settings.component.html
@@ -1,127 +1,159 @@
-<div class="container main-content">
-	<div class="col-xs-3">
-		<ul class="list-group settings-list">
-			<li class="list-group-item" *ngFor="let tab of tabs;" [class.active]="tab.id == activeTab" (click)="onClickTab(tab.id)">
-				{{tab.name}}
-			</li>
-		</ul>
-	</div>
-	<div class="col-xs-9">
-		<div class="settings-content" *ngIf="activeTab=='profile'">
-			<form class="form-horizontal" #f="ngForm">
-				<div class="form-group">
-					<label for="inputUsername" class="col-sm-2 control-label">Username</label>
-					<div class="col-sm-10">
-						<div *ngIf="user_name!=''">
-							<input type="text" class="form-control" id="inputUsername" placeholder="Username" name="username" readonly="readonly" [(ngModel)]="userData.user_name">
-						</div>
-						<div *ngIf="user_name==''">
-							<input type="text" class="form-control" id="inputUsername" placeholder="Username" name="username" [(ngModel)]="userData.user_name">
-						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputFirstName" class="col-sm-2 control-label">First Name</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="inputFirstName" placeholder="First Name" name="first_name" [(ngModel)]="userData.first_name">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputLastName" class="col-sm-2 control-label">Last Name</label>
-					<div class="col-sm-10">
-						<input type="text" class="form-control" id="inputLastName" placeholder="Last Name" name="last_name" [(ngModel)]="userData.last_name">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputPhone" class="col-sm-2 control-label">Phone Number</label>
-					<div class="col-sm-10">
-						<input type="tel" class="form-control" id="inputPhone" placeholder="Phone Number" name="mobile" [(ngModel)]="userData.mobile">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputEmail" class="col-sm-2 control-label">Email</label>
-					<div class="col-sm-10">
-						<input type="email" class="form-control" id="inputEmail" placeholder="Email" name="email" readonly="readonly" [(ngModel)]="userData.email">
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-primary">Update</button>
-					</div>
-				</div>
-			</form>
-		</div>
-		<div class="settings-content" *ngIf="activeTab=='password'">
-			<form class="form-horizontal" #f="ngForm">
-				<div class="form-group">
-					<label for="inputPassword1" class="col-sm-2 control-label">Old Password</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword1" placeholder="Old Password" name="password" ngModel>
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputPassword2" class="col-sm-2 control-label">New Password</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword2" placeholder="New Password" name="password" ngModel>
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputPassword3" class="col-sm-2 control-label">Confirm Password</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword3" placeholder="Confirm Password" name="password" ngModel>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-primary">Change Password</button>
-					</div>
-				</div>
-			</form>
-		</div>
-		<div class="settings-content" *ngIf="activeTab=='subscribe'">
-			<div *ngIf="userData.is_subscribe">
-				<div class="col-sm-4 plan-price-card-wrapper" style="text-align: center;" *ngFor="let plan of userData.subscriptions;">
-					<div class="plan-price-card">
-						<h4 class="text-center">{{ plan.current_period_end | date : "medium" }}</h4>
-						<a class="plan-apply-btn btn btn-default" (click)="onBtnUnsubscribeClick(plan)">Unsubscribe</a>
-					</div>
-				</div>
-			</div>
-			<div *ngIf="!userData.is_subscribe">
-				<h2 class="text-center">No Plan subscribed.</h2>
-			</div>
-		</div>
-	</div>
-</div>
+<section class="dashboardHome" *ngIf="userData">
+  <div class="container">
+    <div class="common-loader" *ngIf="isLoading">
+      <md-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></md-progress-spinner>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 dashboardContainer">
+        <div class="dashboardContainerWrapper">
+          <div class="dashMainWrapper">
+            <div class="leftFilter">
+              <div>
+                <ul class="list-group settings-list">
+                  <li class="list-group-item" *ngFor="let tab of tabs;" [class.active]="tab.id == activeTab"
+                      (click)="onClickTab(tab.id)">
+                    {{tab.name}}
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="dashboardMain">
+              <div class="dTabs">
+                <div>
+                  <div class="settings-content" *ngIf="activeTab=='profile'">
+                    <form class="form-horizontal" #f="ngForm">
+                      <div class="form-group">
+                        <label for="inputUsername" class="col-sm-2 control-label">Username</label>
+                        <div class="col-sm-10">
+                          <div>
+                            <input type="text" class="form-control" id="inputUsername" placeholder="Username"
+                                   name="username" [readonly]="userData.user_name" [(ngModel)]="userData.user_name">
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputFirstName" class="col-sm-2 control-label">First Name</label>
+                        <div class="col-sm-10">
+                          <input type="text" class="form-control" id="inputFirstName" placeholder="First Name"
+                                 name="first_name" [(ngModel)]="userData.first_name">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputLastName" class="col-sm-2 control-label">Last Name</label>
+                        <div class="col-sm-10">
+                          <input type="text" class="form-control" id="inputLastName" placeholder="Last Name"
+                                 name="last_name" [(ngModel)]="userData.last_name">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputPhone" class="col-sm-2 control-label">Phone Number</label>
+                        <div class="col-sm-10">
+                          <input type="tel" class="form-control" id="inputPhone" placeholder="Phone Number"
+                                 name="mobile" [(ngModel)]="userData.mobile">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputEmail" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                          <input type="email" class="form-control" id="inputEmail" placeholder="Email" name="email"
+                                 readonly="readonly" [(ngModel)]="userData.email">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <button type="submit" class="btn btn-primary my-btn">Update</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="settings-content" *ngIf="activeTab=='password'">
+                    <form class="form-horizontal" #f="ngForm">
+                      <div class="form-group">
+                        <label for="inputPassword1" class="col-sm-2 control-label">Old Password</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" id="inputPassword1" placeholder="Old Password"
+                                 name="password" ngModel>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputPassword2" class="col-sm-2 control-label">New Password</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" id="inputPassword2" placeholder="New Password"
+                                 name="password" ngModel>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Confirm Password</label>
+                        <div class="col-sm-10">
+                          <input type="password" class="form-control" id="inputPassword3" placeholder="Confirm Password"
+                                 name="password" ngModel>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                          <button type="submit" class="btn btn-primary my-btn">Change Password</button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="settings-content" *ngIf="activeTab=='subscribe'">
+                    <div *ngIf="userData.is_subscribe">
+                      <div class="col-sm-4 plan-price-card-wrapper" style="text-align: center;"
+                           *ngFor="let plan of userData.subscriptions;">
+                        <div class="plan-price-card">
+                          <h4 class="text-center">{{ plan.current_period_end | date : "medium" }}</h4>
+                          <a class="plan-apply-btn btn btn-default"
+                             (click)="onBtnUnsubscribeClick(plan)">Unsubscribe</a>
+                        </div>
+                      </div>
+                    </div>
+                    <div *ngIf="!userData.is_subscribe">
+                      <h2 class="text-center">No Plan subscribed.</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!--<div class="container main-content">
+
+
+</div>-->
 
 <template #unsubscribeTemplateRef let-unsubscribeDialog="dialogRef">
-	<div class="unsubscribeModal">
-		<div class="modal-header">
-			<h1 class="modal-title text-center" id="myModalLabel">End Subscription</h1>
-		</div>
-		<div class="modal-body">
-			<div class="row">
-				<div class="col-xs-12">
-					<div class="unsubscribeOption">
-						<input type="radio" name="unsubscribeOption" value="immediate" [(ngModel)]="unsubscribeOption" />
-						<div class="info">
-							<p><strong>Immediately</strong></p>
-							<p class="text-muted">End the subscription immediately.</p>
-						</div>
-					</div>
-					<div class="unsubscribeOption">
-						<input type="radio" name="unsubscribeOption" value="at_period_end" [(ngModel)]="unsubscribeOption" />
-						<div class="info">
-							<p><strong>At period end ({{ selectedPlan.current_period_end | date : 'medium' }})</strong></p>
-							<p class="text-muted">End the subscription at the end of the current billing period.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="modal-footer">
-			<button type="button" class="btn btn-default" (click)="unsubscribeDialog.close(true)">Close</button>
-			<button type="button" class="btn btn-primary" (click)="endSubscription(unsubscribeDialog)">End Subscription</button>
-		</div>
-	</div>
+  <div class="unsubscribeModal">
+    <div class="modal-header">
+      <h1 class="modal-title text-center" id="myModalLabel">End Subscription</h1>
+    </div>
+    <div class="modal-body">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="unsubscribeOption">
+            <input type="radio" name="unsubscribeOption" value="immediate" [(ngModel)]="unsubscribeOption"/>
+            <div class="info">
+              <p><strong>Immediately</strong></p>
+              <p class="text-muted">End the subscription immediately.</p>
+            </div>
+          </div>
+          <div class="unsubscribeOption">
+            <input type="radio" name="unsubscribeOption" value="at_period_end" [(ngModel)]="unsubscribeOption"/>
+            <div class="info">
+              <p><strong>At period end ({{ selectedPlan.current_period_end | date : 'medium' }})</strong></p>
+              <p class="text-muted">End the subscription at the end of the current billing period.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-default" (click)="unsubscribeDialog.close(true)">Close</button>
+      <button type="button" class="btn btn-primary" (click)="endSubscription(unsubscribeDialog)">End Subscription
+      </button>
+    </div>
+  </div>
 </template>
