News page api integrated .

--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -44,7 +44,9 @@
               <li><a>Forums</a></li>
               <li><a>Products</a></li>
               <li><a>Articles</a></li>
-              <li><a>Marketplace</a></li>
+              <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+                <a routerLink="/test">Marketplace</a>
+              </li>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a routerLink="/news">Player News</a>
               </li>
