--- a/src/app/front/components/news/news.component.html
+++ b/src/app/front/components/news/news.component.html
@@ -30,13 +30,34 @@
               <div class="dTabs dTabsInner">
                 <!-- Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
-                  <li role="presentation" class="active"><a href="#All" aria-controls="All" role="tab"
-                                                            data-toggle="tab">All</a></li>
-                  <li role="presentation"><a href="#Urgent" aria-controls="Urgent" role="tab"
-                                             data-toggle="tab">Urgent</a></li>
-                  <li role="presentation"><a href="#Important" aria-controls="Important" role="tab" data-toggle="tab">Important</a>
+                  <li role="presentation" class="active">
+                    <a (click)="onNewsPriorityChanged(PRIORITY_ALL)"
+                       role="tab"
+                       data-toggle="tab"
+                       aria-controls="All">All
+                    </a>
                   </li>
-                  <li role="presentation"><a href="#Noteworthy" aria-controls="Noteworthy" role="tab" data-toggle="tab">Notewort</a>
+                  <li role="presentation">
+                    <a href="#Urgent"
+                       (click)="onNewsPriorityChanged(PRIORITY_URGENT)"
+                       role="tab"
+                       data-toggle="tab"
+                       aria-controls="Urgent">Urgent
+                    </a>
+                  </li>
+                  <li role="presentation">
+                    <a (click)="onNewsPriorityChanged(PRIORITY_IMPORTANT)"
+                       href="#Important"
+                       aria-controls="Important"
+                       role="tab"
+                       data-toggle="tab">Important</a>
+                  </li>
+                  <li role="presentation">
+                    <a (click)="onNewsPriorityChanged(PRIORITY_NOTE_WORTHY)"
+                       href="#Noteworthy"
+                       aria-controls="Noteworthy"
+                       role="tab"
+                       data-toggle="tab">Notewort</a>
                   </li>
                 </ul>
                 <!-- Tab panes -->
@@ -44,13 +65,16 @@
                   <div class="tab-pane active">
                     <div class="no-news-msg" *ngIf="!newsRecords || !newsRecords.length">No news available !!</div>
                     <div class="newsItmWrap">
-                      <div class="newsItm" *ngFor="let news of newsRecords">
+                      <div class="newsItm" *ngFor="let news of newsRecords | paginate: {
+                                                      itemsPerPage: 10,
+                                                      currentPage: currentPage}">
                         <div class="newsItmTp">
                           <div class="newsItmNameWrap">
                             <div class="newsItmName">
-                              <span class="newsImg"><img [attr.src]="news?.team?.team_wikipedia_logo_url" alt=""
-                                                         style="width: 70px;height: 70px"
-                                                         class="img-responsive"/></span>
+                              <span class="newsImg" *ngIf="news?.team?.team_wikipedia_logo_url">
+                                <img [attr.src]="news?.team?.team_wikipedia_logo_url" alt=""
+                                     style="width: 70px;height: 70px"
+                                     class="img-responsive"/></span>
                               <span class="newsName"><a href="javascript:void(0)">{{news?.player?.player_first_name}} {{news?.player?.player_last_name}}</a></span>
                             </div>
                             <div class="newsItmDate">
@@ -58,8 +82,10 @@
                             </div>
                           </div>
                           <div class="newsWrap">
-                            <h2><a href="javascript:void(0)">{{news?.news_headline}}</a></h2>
-                            <p>{{news?.news_notes}}</p>
+                            <h2><a>{{news?.news_headline}}</a></h2>
+                            <p style="text-align: justify">{{news?.news_notes}}</p>
+                            <h5 *ngIf="news.news_analysis">Analysis</h5>
+                            <p *ngIf="news.news_analysis" style="text-align: justify">{{news?.news_analysis}}</p>
                             <!--<i class="newsReprtr">As reported by RotoGrinders Player Projections</i>-->
                           </div>
                         </div>
@@ -96,8 +122,9 @@
                       </div>
                     </div>
 
-                    <!--<div class="pagination">
-                      <ul>
+                    <div class="pagination">
+                      <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+                      <!--<ul>
                         <li><a href="javascript:void(0)"><span aria-hidden="true">&laquo;</span></a></li>
                         <li class="active"><a href="javascript:void(0)">1</a></li>
                         <li><a href="javascript:void(0)">2</a></li>
@@ -106,8 +133,8 @@
                         <li><a href="javascript:void(0)">29</a></li>
                         <li><a href="javascript:void(0)">30</a></li>
                         <li><a href="javascript:void(0)"><span aria-hidden="true">&raquo;</span></a></li>
-                      </ul>
-                    </div>-->
+                      </ul>-->
+                    </div>
 
                   </div>
                 </div>
